testsuite/tests/typecheck/should_compile/T15473.stderr

T15473.hs:11:3: error:
    • Variable ‘a’ occurs more often
        in the type family application ‘Undefined’
        than in the instance head ‘LetInterleave xs t ts is y z’
      (Use UndecidableInstances to permit this)
    • In the equations for closed type family ‘LetInterleave’
      In the type family declaration for ‘LetInterleave’
